# gentool

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  cc_dependency.py  clean_all.sh  dependency_container.py  generate_group.py  generate_json.py  generate_maven_cpp_deps.py  java_dependency.py  platforms.py  requirements_lock.txt  setup_non_bzlmod_pip_extension.bzl  vendordep_dependency.py
bazelrio_gentool/: BUILD  auto_update_utils.py  bak.py  cached_versions.yml  clean_existing_version.py  cli.py  create_vendordep_library.py  dependency_helpers.py  generate_group.py  generate_json.py  generate_maven_cpp_deps.py  generate_module_project_files.py  generate_shared_files.py  generate_styleguide_rule.py  generate_toolchain.py  generate_vendordep_raw_libs.py  load_cached_versions.py  load_vendordep_dependency.py  manual_cleanup_helper.py  publish_module.py  utils.py
bazelrio_gentool/templates/generator/: MODULE.bazel.jinja2  WORKSPACE.jinja2
bazelrio_gentool/templates/library_wrapper/: MODULE.bazel.jinja2  WORKSPACE.jinja2  maven_cpp_deps.bzl.jinja2  maven_java_deps.bzl.jinja2
bazelrio_gentool/templates/module/: .bazelrc.jinja2  MODULE.bazel.jinja2  WORKSPACE.jinja2  maven_cpp_deps.bzl.jinja2  (+1 more)
patches/headers/: add_build_file.patch
patches/libraries/: add_build_file.patch
publish/: BUILD  module_config.jinja2  module_config.json.jinja2  publish.py
templates/: maven_cpp_deps.jinja2  top_module.jinja2
templates/cpp/: BUILD.bazel.jinja2  MODULE.bazel.jinja2
templates/java/: BUILD.bazel.jinja2  MODULE.bazel.jinja2
templates/repo_json/: overall.json.jinja2
(+125 files in other folders)
