module(
    name = "bzlmodrio-gentool",
    version = "1.0.1",
    compatibility_level = 2023,
)

bazel_dep(name = "rules_python", version = "0.24.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)
use_repo(python, "python_versions")

register_toolchains(
    "@python_versions//:all",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bzlmodrio-gentool-pip",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "bzlmodrio-gentool-pip")
